--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -186,24 +186,30 @@ runs:
       run: |
         echo "ALTER USER 'root'@'localhost' IDENTIFIED BY 'mysql';" > init.txt
         mkdir ./mysql/data1 ./mysql/data2 ./mysql/data3
+#        dir
+#        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data1 --port=3306  --console
+#        dir
+#        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data2 --port=3307  --console
+#        dir
+#        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data3 --port=3308  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data1 --port=3307  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure  --datadir=./mysql/data1 --port=3306  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data2 --port=3308  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure  --datadir=./mysql/data2 --port=3307  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize --init-file=D:/a/IGinX/IGinX/init.txt --datadir=./mysql/data3 --port=3309  --console
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure  --datadir=./mysql/data3 --port=3308  --console
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data1 --port=3306 &
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data2 --port=3308 &
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data2 --port=3307 &
         dir
-        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data3 --port=3309 &
+        ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data3 --port=3308 &
 
     - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
       name: Setup Database for each instance
       shell: bash
       run: |
-        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root -p mysql --port=3307
-        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root -p mysql --port=3308
-        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root -p mysql --port=3309
+        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root --port=3306
+        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root --port=3307
+        ./mysql/mysql-8.0.31-winx64/bin/mysql -v -u root --port=3308
 
