--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -18,7 +18,7 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [macos-latest]
+                os: [ubuntu-latest, macos-latest]
                 DB-name: ["MySQL"]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
