检测docker mysql运行环境

--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -44,6 +44,12 @@ jobs:
               shell: bash
               run: |
                 docker ps
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/tools/wait_for_health.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/tools/wait_for_health.sh" mysql1
+                docker ps
+                "${GITHUB_WORKSPACE}/.github/scripts/test/tools/wait_for_health.sh" mysql2
+                docker ps
+                "${GITHUB_WORKSPACE}/.github/scripts/test/tools/wait_for_health.sh" mysql3
 
             - name: Install IGinX with Maven
               shell: bash
