--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -196,9 +196,9 @@ runs:
             cp /usr/local/etc/my.cnf /usr/local/etc/my1.cnf
             cp /usr/local/etc/my.cnf /usr/local/etc/my2.cnf
             cp /usr/local/etc/my.cnf /usr/local/etc/my3.cnf
-            sed -i '' -e 's/^port=.*$/port=3306/' -e 's/^mysqlx_port=.*$/mysqlx_port=33060/' -e 's/^user=.*$/user=root/' -e 's/^socket=.*$/socket=/tmp/mysql1.sock/' /usr/local/etc/my1.cnf
-            sed -i '' -e 's/^port=.*$/port=3307/' -e 's/^mysqlx_port=.*$/mysqlx_port=33061/' -e 's/^user=.*$/user=root/' -e 's/^socket=.*$/socket=/tmp/mysql2.sock/' /usr/local/etc/my2.cnf
-            sed -i '' -e 's/^port=.*$/port=3308/' -e 's/^mysqlx_port=.*$/mysqlx_port=33062/' -e 's/^user=.*$/user=root/' -e 's/^socket=.*$/socket=/tmp/mysql3.sock/' /usr/local/etc/my3.cnf
+            sed -i '' -e 's/^port=.*$/port=3306/' -e 's/^mysqlx_port=.*$/mysqlx_port=33060/' -e 's/^user=.*$/user=root/' -e 's#^socket=.*$#socket=/tmp/mysql1.sock#' /usr/local/etc/my1.cnf
+            sed -i '' -e 's/^port=.*$/port=3307/' -e 's/^mysqlx_port=.*$/mysqlx_port=33061/' -e 's/^user=.*$/user=root/' -e 's#^socket=.*$#socket=/tmp/mysql2.sock#' /usr/local/etc/my2.cnf
+            sed -i '' -e 's/^port=.*$/port=3308/' -e 's/^mysqlx_port=.*$/mysqlx_port=33062/' -e 's/^user=.*$/user=root/' -e 's#^socket=.*$#socket=/tmp/mysql3.sock#' /usr/local/etc/my3.cnf
             /usr/local/Cellar/mysql@8.0/8.0.36_1/bin/mysqld --defaults-file=/usr/local/etc/my1.cnf --mysqlx=0 --user=root --initialize-insecure --datadir=./data1 --port=3306 
             /usr/local/Cellar/mysql@8.0/8.0.36_1/bin/mysqld --defaults-file=/usr/local/etc/my2.cnf --mysqlx=0 --user=root --initialize-insecure --datadir=./data2 --port=3307
             /usr/local/Cellar/mysql@8.0/8.0.36_1/bin/mysqld --defaults-file=/usr/local/etc/my3.cnf --mysqlx=0 --user=root --initialize-insecure --datadir=./data3 --port=3308
