--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -21,13 +21,13 @@ jobs:
                 os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
                     [
-                        "FileSystem",
-                        "IoTDB12",
-                        "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
-                        "Parquet",
+#                        "FileSystem",
+#                        "IoTDB12",
+#                        "InfluxDB",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
+#                        "Parquet",
                         "MySQL",
                     ]
                 metadata: [zookeeper]
